# options-AI-assistant

./: .env.example  .gitignore  Dockerfile  README.md  instructions.txt  pyproject.toml
app/: main.py  models.py
app/core/: payoff.py  prompts.py  safety.py  strategies.py
app/providers/llm/: anthropic.py  base.py  factory.py  heuristic.py  vertex.py
app/providers/options/: base.py  factory.py  mock.py  tradier.py
app/services/: chat_service.py  llm_service.py  memory_store.py
app/static/: index.html
eval/: golden_cases.json  run_eval.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
